--- a/Taxi.Prism/Taxi.Prism/Taxi.Prism.csproj
+++ b/Taxi.Prism/Taxi.Prism/Taxi.Prism.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.2.0.1422" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\" />
+  </ItemGroup>
+
 </Project>
